minor css fixes on all events view. Truncate event decription

--- a/web/sites/default/themes/ubnext/less/ubn-event-occasions.less
+++ b/web/sites/default/themes/ubnext/less/ubn-event-occasions.less
@@ -3,15 +3,16 @@
     	text-align: center;
 	}
 	.event-month{
-		font-family: @font-family-sans-serif;
-		font-size: 34px;
-		font-weight: bold;
+		
 	}
 }
 
 
 
 .event-occations-by-month{
+	.event-canceled{
+		margin-left: -22px;
+	}
 	margin-top: 8px;
 	.event-occasion-wrapper{
 		border-bottom: 1px solid @ub-grey;
@@ -33,13 +34,13 @@
 		border: 2px solid red;
 	}
 	.event-occations-event-day-of-week{
-		font-size: 10px;
+		font-size: 11px;
 		font-weight: bold;
 		padding-top: 8px;
 	}
 
 	.event-occations-event-month{
-		font-size: 10px;
+		font-size: 11px;
 		font-weight: bold;
 		margin-top: 8px;
 	}
@@ -51,7 +52,17 @@
 
 	.event-occations-event-link{
 		font-family: @font-family-sans-serif;
-		font-size: 18px;
+		margin-right: 26px;
+    	font-size: 18px;
+    	&:after{
+    		font-family: "FontAwesome";
+    		content: "\f061";
+    		position: relative;
+    		top: -2px;
+    		margin-left: 8px;
+    		display: inline-block;
+    		font-size: 12px;
+    	}
 	}
 
 
